# SAEEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  CODE_OF_CONDUCT.md  LICENSE  LISCENSE  README.md
Examples/: CMakeLists.txt
Examples/CustomExtension/: CMakeLists.txt  ExtensionExample.cpp
Examples/LuaAPI/: CMakeLists.txt  engineStart.lua  example.cpp  example.lua  fragmentShader.glsl
Examples/ManipulateTexture/: CMakeLists.txt  manip.lua  manipulateTexture.cpp
Examples/UIExample/: CMakeLists.txt  UIExample.cpp  createUIElement.lua  engineStart.lua  spriteFragment.glsl  spriteVertex.glsl  vertexShader.glsl  widgetHelper.lua
SAEEngine/: CMakeLists.txt  CMakeSettings.json  SAEEngineConfig.h.in
SAEEngine/Examples/: CMakeLists.txt  example.cpp  example.lua  fragmentShader.glsl  vertexShader.glsl
SAEEngine/Examples/CustomExtension/: ExtensionExample.cpp  usingExtensions.lua
SAEEngine/Examples/LuaAPI/: engineStart.lua  example.cpp  example.lua  otherScene.lua
SAEEngine/Examples/ManipulateTexture/: CMakeLists.txt  manipulateTexture.cpp
SAEEngine/SAEEngine/: CMakeLists.txt
SAEEngine/SAEEngine/include/: SAEEngine.h
SAEEngine/SAEEngine/source/: GFXTypes.cpp  LuaAPI.h  SAEEngine.cpp
SAEEngine/SAEEngine/source/file/: engine_file.cpp  engine_file.h
SAEEngine/SAEEngine/source/gfx/: engine_gfx.cpp  engine_gfx.h
SAEEngine/SAEEngine/source/io/: engine_io.cpp  engine_io.h
SAEEngine/SAEEngine/source/os/: engine_os.cpp  engine_os.h
SAEEngine/SAEEngine/source/physics/: engine_physics.cpp
SAEEngine/SAEEngine/source/scene/: engine_scene.cpp  engine_scene.h
SAEEngine/SAEEngine/source/shader/: engine_shader.cpp  engine_shader.h
SAEEngine/SAEEngine/source/window/: engine_window.cpp  engine_window.h
SAEEngine/include/: SAEEngine.h  SAEEngine_BaseTypes.h
SAEEngine/lib/: CMakeLists.txt
SAEEngine/lib/lodepng/: lodepng.cpp
SAEEngine/lib/lua/: CMakeLists.txt
SAEEngine/lib/sae/: SAELib_Concepts.h  SAELib_Either.h  SAELib_FileParse.h  SAELib_Logging.h  SAELib_Type.h
SAEEngine/lib/sae/lua/: CMakeLists.txt
SAEEngine/lib/sae/lua/include/: SAELua.h
SAEEngine/lib/sae/lua/source/: SAELua.cpp
SAEEngine/source/: LuaAPI.h  SAEEngine.cpp
SAEEngine/source/file/: engine_file.cpp  engine_file.h
SAEEngine/source/gfx/: engine_gfx.cpp  engine_gfx.h
SAEEngine/source/io/: engine_io.cpp  engine_io.h
SAEEngine/source/physics/: engine_physics.cpp  engine_physics.h
SAEEngine/source/scene/: engine_scene.cpp  engine_scene.h
SAEEngine/source/shader/: engine_shader.cpp  engine_shader.h
SAEEngine/source/texture/: engine_texture.cpp  engine_texture.h  texture.cpp
SAEEngine/source/ui/: engine_ui.cpp  engine_ui.h
SAEEngine/source/window/: engine_window.cpp  engine_window.h
lib/: CMakeLists.txt
lib/lodepng/: CMakeLists.txt  lodepng.h
lib/lua/: CMakeLists.txt
lib/sae/: CMakeLists.txt  SAELib_Either.h  SAELib_Functor.h  SAELib_Type.h
lib/sae/lua/include/: SAELua.h
lib/sae/lua/source/: SAELua.cpp
